--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -5,25 +5,28 @@
    "id": "fde68e5d",
    "metadata": {},
    "source": [
-    "### Vamos usar o KNN aqui no python!\n",
-    "\n",
-    "#### Utilizaremos o famoso Iris Dataset para aplicar esse modelo\n",
-    "https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset\n",
-    "\n",
-    "![alt_text](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png)\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "Baseado nas características da pétala, vamos tentar determinar qual o tipo de Íris ela é!"
+    "Baseado nas características da pétala, vamos tentar determinar qual o tipo de Íris ela é! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "id": "51ef053b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Utilizaremos o  Iris Dataset para aplicar esse modelo KNN\n",
+    "#(https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c8b3a465",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# vamos separar os dados entre treino e teste, \n",
     "# entao vamos importar a função que faz isso\n",
     "\n",
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "bc1e3e12",
    "metadata": {},
    "outputs": [],
@@ -44,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "34ac5200",
    "metadata": {},
    "outputs": [],
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "d1d487ca",
    "metadata": {},
    "outputs": [
@@ -210,7 +213,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "778cb1e3",
    "metadata": {},
    "outputs": [
@@ -316,7 +319,7 @@
        "2      50.0  6.588  0.635880  4.9  6.225  6.5  6.9  7.9"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "cb2d5e46",
    "metadata": {},
    "outputs": [
@@ -419,7 +422,7 @@
        "2      50.0  2.026  0.274650  1.4  1.8  2.0  2.3  2.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "1ee03466",
    "metadata": {},
    "outputs": [],
@@ -452,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "5a77551c",
    "metadata": {},
    "outputs": [],
@@ -462,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e8624256",
    "metadata": {},
    "outputs": [],
@@ -474,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "cd7663a9",
    "metadata": {},
    "outputs": [
@@ -891,7 +894,7 @@
        "KNeighborsClassifier(n_neighbors=3)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "ac09d62c",
    "metadata": {},
    "outputs": [
@@ -919,7 +922,7 @@
        "       0, 0, 1, 0, 2, 1, 2, 1, 0, 1])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "1092b339",
    "metadata": {},
    "outputs": [
@@ -961,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "e0ce6ce3",
    "metadata": {},
    "outputs": [
@@ -971,7 +974,7 @@
        "0.9083333333333333"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,12 +988,12 @@
    "id": "c9e1692e",
    "metadata": {},
    "source": [
-    "### Agora, vamos deixar os dados com a mesma média e mesma variância"
+    "#### Agora, vamos deixar os dados com a mesma média e mesma variância"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "b68aa802",
    "metadata": {},
    "outputs": [],
@@ -1007,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "21db620b",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "442ba832",
    "metadata": {},
    "outputs": [
@@ -1121,13 +1124,13 @@
        "max    2.164432e+00  2.253380e+00  1.612742e+00  1.524349e+00"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pandas.DataFrame(X_train).describe()"
+    "pd.DataFrame(X_train).describe()"
    ]
   },
   {
@@ -1144,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "5096c8a0",
    "metadata": {},
    "outputs": [
@@ -1582,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "6ecaba20",
    "metadata": {},
    "outputs": [
@@ -1612,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8e2a3b6d",
    "metadata": {},
    "outputs": [
@@ -1631,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "d1f6df25",
    "metadata": {},
    "outputs": [
@@ -1652,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "5bc83939",
    "metadata": {},
    "outputs": [
@@ -1681,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "a6f62d0c",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "e0224848",
    "metadata": {},
    "outputs": [],
@@ -1711,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "3b580e9e",
    "metadata": {},
    "outputs": [],
@@ -1723,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "86cc1a64",
    "metadata": {},
    "outputs": [
@@ -1802,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "b318c405",
    "metadata": {},
    "outputs": [],
@@ -1812,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "c5f4a74b",
    "metadata": {},
    "outputs": [
@@ -1910,7 +1913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
