--- a/KPCA.ipynb
+++ b/KPCA.ipynb
@@ -5,14 +5,7 @@
    "id": "fde68e5d",
    "metadata": {},
    "source": [
-    "### Vamos usar o KPCA aqui no python!\n",
-    "\n",
-    "#### Utilizaremos o famoso Iris Dataset para aplicar esse modelo\n",
-    "https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset\n",
-    "\n",
-    "![alt_text](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png)\n",
-    "\n",
-    "<br>"
+    "##### Vamos usar o KPCA aqui no python!"
    ]
   },
   {
@@ -622,22 +615,6 @@
     "\n",
     "fig.show(\"notebook\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6ce3211",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d841fa3-3690-4f1f-b6b2-48d42da2f866",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
