--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -5,14 +5,7 @@
    "id": "fde68e5d",
    "metadata": {},
    "source": [
-    "### Vamos o SVM aqui no python!\n",
-    "\n",
-    "#### Utilizaremos o famoso Iris Dataset para aplicar esse modelo\n",
-    "https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset\n",
-    "\n",
-    "![alt_text](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Machine+Learning+R/iris-machinelearning.png)\n",
-    "\n",
-    "<br>\n",
+    "##### Vamos o SVM aqui no python!\n",
     "\n",
     "Baseado nas características da pétala, vamos tentar determinar qual o tipo de Íris ela é!"
    ]
